--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml"/>
     <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="color-scheme" content="dark light">
     <title>Закрывающий тег</title>
     <link rel="stylesheet" href="./fonts/fonts.css"/>
     <link rel="stylesheet" href="./styles/variables.css"/>
@@ -14,10 +17,10 @@
 </head>
 <body class="page points">
 <header class="header">
-    <a class="header__text">
+    <a class="headerText">
         &lt;/HTML&GT;
     </a>
-    <h1 class="header__title">
+    <h1 class="headerTitle">
         закрывающий тег
     </h1>
     <nav class="theme-menu header__theme-menu">
