--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <figcaption class="labelText">
                 &lt;/HTML>
             </figcaption>
-            <img class="img" src="./images/image_2.png" loading="lazy" alt="Фургон, тот же автор, меньше яркость">
+            <img class="img gray" src="./images/image_1.png" loading="lazy" alt="Фургон, тот же автор, меньше яркость">
         </figure>
         <div class="block">
             <p class="blockText">
@@ -147,7 +147,7 @@
             <figcaption class="labelText">
                 &lt;CSS>
             </figcaption>
-            <img class="img" src="./images/image_3.png" loading="lazy"
+            <img class="img saturate" src="./images/image_1.png" loading="lazy"
                  alt="Это опять фургон, только цвета поменялись, больше розового">
         </figure>
         <div class="block">
@@ -193,7 +193,7 @@
             <figcaption class="labelText">
                 &lt;desigions>
             </figcaption>
-            <img class="img" src="./images/image_4.png" loading="lazy"
+            <img class="img hue-rotate" src="./images/image_1.png" loading="lazy"
                  alt="Не ошиблись, фургон, больше фиолетового оттенка">
         </figure>
         <div class="block">
@@ -239,7 +239,7 @@
             <figcaption class="labelText">
                 care
             </figcaption>
-            <img class="img" src="./images/image_5.png" loading="lazy"
+            <img class="img invert" src="./images/image_1.png" loading="lazy"
                  alt="Тут фильтр, словно пленка засвечена, но что-то осталось видно">
         </figure>
         <div class="block">
@@ -287,7 +287,7 @@
             <figcaption class="labelText">
                 &lt;support>
             </figcaption>
-            <img class="img" src="./images/image_6.png" loading="lazy" alt="Фургон, черно-белый">
+            <img class="img sepia" src="./images/image_1.png" loading="lazy" alt="Фургон, черно-белый">
         </figure>
         <div class="block">
             <p class="blockText">
@@ -332,7 +332,7 @@
             <figcaption class="labelText">
                 &lt;lifes-style: none;>
             </figcaption>
-            <img class="img" src="./images/image_7.png" loading="lazy" alt="Размытое изображение, такая стиллизация">
+            <img class="img blur" src="./images/image_1.png" loading="lazy" alt="Размытое изображение, такая стиллизация">
         </figure>
         <div class="block">
             <p class="blockText">
@@ -377,7 +377,7 @@
             <figcaption class="labelText">
                 &lt;experience>
             </figcaption>
-            <img class="img" src="./images/image_8.png" loading="lazy"
+            <img class="img green" src="./images/image_1.png" loading="lazy"
                  alt="Фургон, фильтр на изображении с противоположными оригиналу оттенками">
         </figure>
         <div class="block">
